// Copyright 2022 The Chromium Authors. All rights reserved.
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

syntax = "proto3";

package recipes.build.chromium_polymorphic.launcher;

import "go.chromium.org/luci/buildbucket/proto/builder_common.proto";
import "recipe_modules/build/chromium_polymorphic/properties.proto";

// Next ID: 3
message InputProperties {

  // The polymorphic runner builder to trigger
  buildbucket.v2.BuilderID runner_builder = 1;

  // Information about builders to target
  //
  // For each target builder, the runner builder will be triggered with
  // properties set so that the properties and builder config of the target
  // builder will be used.
  //
  // Next ID: 4
  message TargetBuilder {
    // The Buildbucket ID of the target builder
    buildbucket.v2.BuilderID builder_id = 1;

    // Testers that the operation should be limited to
    //
    // If not specified, the operation will include all testers triggered by the
    // target builder. Any testers that are specified must be testers that are
    // triggered by the target builder.
    recipe_modules.build.chromium_polymorphic.TesterFilter tester_filter = 3;

    // The dimensions to apply to the target builder
    //
    // The dimensions will be merged with the dimensions of runner builder. This
    // is handled by buildbucket. Any per-builder dimensions specified here will
    // override the runner builder's value. An empty value for a per-builder
    // dimension will remove the dimension from the request.
    map<string, string> dimensions = 2;
  }
  repeated TargetBuilder target_builders = 2;
}
